--- a/checkpoint.html
+++ b/checkpoint.html
@@ -3,68 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            color: #333;
-            background-color: #f4f4f4;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        section {
-            margin: 20px 0;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        .video, .audio {
-            margin: 20px 0;
-        }
-        form {
-            background: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        form input, form textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-        }
-        footer {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -110,9 +50,9 @@
         <section id="work">
             <h2>Work</h2>
             <ul>
-                <li><a href="project1.html">Project 1</a> - A detailed description of Project 1.</li>
-                <li><a href="project2.html">Project 2</a> - A detailed description of Project 2.</li>
-                <li><a href="project3.html">Project 3</a> - A detailed description of Project 3.</li>
+                <li><a href="project1.html">Project 1</a> - Web page for a sugar making company.</li>
+                <li><a href="project2.html">Project 2</a> - Backend development for a renowned bank</li>
+                <li><a href="project3.html">Project 3</a> - Built and designed a dating website and application.</li>
             </ul>
         </section>
 
